Remove unused key from project.clj